--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # magnet
-net mag
-internet magazine 
+inter(net)(mag)azine
 
-personal website and portfolio in development
-- experimental programming, photo-journal, and graphic design
+
+personal website and portfolio
+- experimental programming, photo-journal, graphic design
